// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a select input with options 1`] = `
<DocumentFragment>
  <div
    class="sc-AxgMl cZbWSE"
  >
    <select
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
      data-testid="Select"
    >
      <option
        data-testid="select-option"
        selected=""
        value="1"
      >
        Option 1
      </option>
      <option
        data-testid="select-option"
        value="2"
      >
        Option 2
      </option>
    </select>
    <div
      class="sc-AxiKw sc-AxhUy QmuzF w-12 text-lg pointer-events-none text-theme-neutral-dark"
    >
      <div
        class="sc-AxjAm cpczEI"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select should render a select input with placeholder 1`] = `
<DocumentFragment>
  <div
    class="sc-AxgMl cZbWSE"
  >
    <select
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
      data-testid="Select"
    >
      <option
        disabled=""
        selected=""
        value=""
      >
        Select option
      </option>
    </select>
    <div
      class="sc-AxiKw sc-AxhUy QmuzF w-12 text-lg pointer-events-none text-theme-neutral-dark"
    >
      <div
        class="sc-AxjAm cpczEI"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
